--- a/tomcat-server/server/apache-tomcat-10.1.30/webapps/camunda/index.html
+++ b/tomcat-server/server/apache-tomcat-10.1.30/webapps/camunda/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Camunda Welcome</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="refresh" content="0;URL='app/welcome/'">
-  </head>
-  <body>
-
-  </body>
+    <head>
+        <title>Camunda Welcome</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="refresh" content="0;URL='app/welcome/'" />
+    </head>
+    <body></body>
 </html>
