--- a/camunda-frontend/ui/tasklist/client/scripts/form/directives/cam-tasklist-form-lca-extension.html
+++ b/camunda-frontend/ui/tasklist/client/scripts/form/directives/cam-tasklist-form-lca-extension.html
@@ -1,6 +1,14 @@
 <div>
   <h3 id="title">Select LCA Parameters</h3>
-  <div class="selection">
+  <div class="btn-container" ng-show="!loadedOnce">
+    <button
+     ng-click="loadCostDrivers()"
+    >
+      Load Cost Drivers
+    </button>
+  </div>
+  <div class="loader" ng-show="loading"></div> 
+  <div class="selection" ng-show="abstractCostDrivers.length > 0">
     <label for="abstractCostDriverInput">Abstract Cost Driver:</label>
     <select
       id="abstractCostDriverInput"
@@ -34,8 +42,8 @@
     >
   </div>
 </div>
-<div class="submit-btn-container">
-    <button type="button" ng-click="submit(selectedCostDrivers)">
+<div class="btn-container" ng-show="unsaved(selectedCostDrivers)">
+    <button class="submit-btn" type="button" ng-click="submit(selectedCostDrivers)">
         Submit LCA Parameters
     </button>
 </div>
@@ -92,7 +100,7 @@
     td:nth-child(even) {
         background-color: lightgray;
     }
-    .submit-btn-container {
+    .btn-container {
         padding: 5px;
         margin-top: 15px;
     }
@@ -105,5 +113,34 @@
 
     .add-btn {
         margin-left: 10px;
+        background-color: blue;
+        color: white;
+        border: white;
+        border-radius: 3px;
+        padding: 5px;
+    }
+
+    .submit-btn {
+        margin-top: 15px;
+        background-color: green;
+        color: white;
+        border: white;
+        border-radius: 3px;
+        padding: 5px;
+    }
+
+    .loader {
+        margin-left: 5px;
+        border: 6px solid #f3f3f3;
+        border-top: 6px solid #b5152b;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
     }
 </style>
